Started working on conditions. Hitsplats, damage and timers are working. Need to split concerns of classes better.