@@ -155,9 +155,9 @@ public class Handler implements Serializable {
                 e.printStackTrace();
             }
             AudioManager.soundfxFiles.add(new Source());
-            AudioManager.soundfxFiles.getLast().setVolume(0.15f + volume);
-            AudioManager.soundfxFiles.getLast().setLooping(false);
-            AudioManager.soundfxFiles.getLast().playEffect(buffer);
+            AudioManager.soundfxFiles.get(AudioManager.soundfxFiles.size()-1).setVolume(0.15f + volume);
+            AudioManager.soundfxFiles.get(AudioManager.soundfxFiles.size()-1).setLooping(false);
+            AudioManager.soundfxFiles.get(AudioManager.soundfxFiles.size()-1).playEffect(buffer);
 
         }
     }
